editing the code according to the new gpu

--- a/baseline_transformer.yaml
+++ b/baseline_transformer.yaml
@@ -1,29 +1,29 @@
 # Feature extraction parameters
 feature:
-  n_mels: 32          # Reduced from 64
+  n_mels: 64
   frames: 5
   n_fft: 1024
   hop_length: 512
   power: 2.0
 
-# Transformer model parameters - memory efficient version
+# Transformer model parameters
 transformer:
-  head_size: 16       # Further reduced
-  num_heads: 1        # Minimum
-  ff_dim: 32          # Further reduced
-  num_transformer_blocks: 1  # Absolute minimum
-  mlp_units: [32, 16]  # Further simplified
-  dropout: 0.1
+  head_size: 64
+  num_heads: 4
+  ff_dim: 128
+  num_transformer_blocks: 2
+  mlp_units: [128, 64]
+  dropout: 0.2
 
 # Fit algorithm parameters
 fit:
-  epochs: 50          # Reduced from 100
-  batch_size: 1       # Minimum possible
+  epochs: 100
+  batch_size: 32
   shuffle: True
   validation_split: 0.1
   verbose: 1
   early_stopping: True
-  learning_rate: 0.0005  # Slightly reduced for stability with smaller batches
+  learning_rate: 0.001
 
 # Directory paths
 base_directory: "./dataset"
