--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,13 @@
-# Minimal package to use MIMII dataset baseline.
-tensorflow>=2.15.0
-numpy>=1.24.0
+# Minimal package to use MIMII dataset baseline
+tensorflow==2.8.0
+numpy==1.21.3
 matplotlib>=3.7.0
-PyYAML>=6.0
-scikit-learn>=1.3.0
-librosa>=0.10.1
+PyYAML==6.0
+scikit-learn==1.0.2
+librosa==0.8.1
 audioread>=3.0.0
 tqdm>=4.65.0
 scikit-image>=0.19.0
+psutil
+pandas
+seaborn
