--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 # Minimal package to use MIMII dataset baseline
-tensorflow==2.8.0
-numpy==1.21.3  # Keep this version for TF 2.8.0 compatibility
+tensorflow==2.10.0  # Updated for compatibility with newer NumPy
+numpy==1.23.5  # Compatible with both TF 2.10.0 and Numba
 protobuf==3.20.0  # Add explicit protobuf version for compatibility
 matplotlib>=3.7.0
 PyYAML==6.0
