--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 # Minimal package to use MIMII dataset baseline
-tensorflow==2.10.0  # Updated for compatibility with newer NumPy
+tensorflow==2.10.0  # Requires CUDA 11.2 and cuDNN 8.1 for GPU support (Note: tensorflow[and-cuda] is not a valid syntax)
 numpy==1.23.5  # Compatible with both TF 2.10.0 and Numba
 protobuf==3.19.6  # Compatible with TensorFlow 2.10.0 (<3.20)
 matplotlib>=3.7.0
@@ -12,3 +12,4 @@ scikit-image>=0.19.0
 psutil>=5.9.0
 pandas>=1.4.0
 seaborn>=0.11.0
+numba==0.56.4  # Required by librosa for performance
