--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,15 @@
 # Minimal package to use MIMII dataset baseline
-tensorflow==2.10.0  # Requires CUDA 11.2 and cuDNN 8.1 for GPU support (Note: tensorflow[and-cuda] is not a valid syntax)
-numpy==1.23.5  # Compatible with both TF 2.10.0 and Numba
+tensorflow==2.10.0  # Requires CUDA 11.2 and cuDNN 8.1 for GPU support
+numpy==1.24.4  # Latest compatible with TF 2.10.0
 protobuf==3.19.6  # Compatible with TensorFlow 2.10.0 (<3.20)
-matplotlib>=3.7.0
-PyYAML==6.0
-scikit-learn==1.0.2
-librosa==0.8.1
-audioread>=3.0.0
-tqdm>=4.65.0
-scikit-image>=0.19.0
-psutil>=5.9.0
-pandas>=1.4.0
-seaborn>=0.11.0
+matplotlib==3.8.4
+PyYAML==6.0.1
+scikit-learn==1.3.2
+librosa==0.9.2
+audioread==3.0.1
+tqdm==4.66.5
+scikit-image==0.22.0
+psutil==6.0.0
+pandas==2.0.3
+seaborn==0.13.2
 numba==0.56.4  # Required by librosa for performance
