--- a/baseline.yaml
+++ b/baseline.yaml
@@ -20,22 +20,24 @@ fit:
   compile:
     optimizer: "adam"
     loss: "hybrid_loss"
-  epochs: 150  # Increase from 100 to 150 for better convergence
-  batch_size: 256  # Reduced from 512 to 256 for better gradient updates
+  epochs: 100
+  batch_size: 512
   shuffle: True
-  validation_split: 0.15  # Increased slightly
+  validation_split: 0.2
   verbose: 1
   early_stopping: True
   learning_rate: 0.001
   use_augmentation: true
-  augmentation_factor: 3  # Increased from 2 to 3 for more data diversity
-  layer_size: 128  # Increased from 64 to 128
-  bottleneck_size: 32  # Increased from 8 to 32
-  dropout_rate: 0.15  # Slightly reduced
-  loss_alpha: 0.3  # Changed to prioritize SSIM more
-  depth: 3  # Added depth parameter for the model
-  activation: "elu"  # Added activation parameter
-  weight_decay: 0.00001  # Added weight decay for regularization
+  augmentation_factor: 3
+  layer_size: 96
+  bottleneck_size: 16
+  dropout_rate: 0.2
+  loss_alpha: 0.6
+  depth: 2
+  activation: "elu"
+  weight_decay: 0.0001
+  mixed_precision: true
+  cache_dataset: true
 
 # Directory paths
 base_directory: "./dataset"
