Revert "fnn edit"
This reverts commit 471b843df370c6e37cc1fd42d213ba27e5b1e5e1.

--- a/baseline.yaml
+++ b/baseline.yaml
@@ -47,7 +47,7 @@ fit:
 
 # Directory paths
 base_directory: "./dataset"
-pickle_directory: "./pickle_fnn"
-model_directory: "./model_fnn"
-result_directory: "./result_fnn"
-result_file: "result_fnn.yaml"
+pickle_directory: "./pickle"
+model_directory: "./model"
+result_directory: "./result"
+result_file: "result.yaml"
