--- a/baseline.yaml
+++ b/baseline.yaml
@@ -39,7 +39,7 @@ model:
     batch_norm: true
     residual: true
   loss: "hybrid"
-  hybrid_loss_alpha: 0.4  # Reduced from 0.6 to prioritize SSIM
+  hybrid_loss_alpha: 0.6
   margin: 0.8  # Reduced from 1.0
 
 # Directory paths
