--- a/baseline.yaml
+++ b/baseline.yaml
@@ -24,7 +24,7 @@ fit:
 
 # Filter to focus on specific dataset parts
 filter:
-  enabled: true
+  enabled: false
   db_level: "0dB"
   machine_type: "fan"
   machine_id: null  # null means all IDs
