keeping accuracy only

--- a/baseline.yaml
+++ b/baseline.yaml
@@ -25,9 +25,9 @@ fit:
 
 # Filter to focus on specific dataset parts
 filter:
-  enabled: false
+  enabled: true
   db_level: "0dB"
-  machine_type: "fan" #...
+  machine_type: "fan"
   machine_id: null  # null means all IDs
 
 # Model architecture parameters
