--- a/baseline.yaml
+++ b/baseline.yaml
@@ -5,11 +5,19 @@ feature:
   n_fft: 1024
   hop_length: 512
   power: 2.0
+  augmentation:
+    enabled: true
+    max_mask_freq: 10
+    max_mask_time: 10
+    n_freq_masks: 2
+    n_time_masks: 2
+    noise_level: 0.01
 
 # Fit algorithm parameters
 fit:
   compile:
     optimizer: "adam"
+    learning_rate: 0.001  # Adam optimizer learning rate
     loss: "binary_crossentropy"
     metrics: ["accuracy"]
     weighted_metrics: ["accuracy"]
@@ -18,10 +26,19 @@ fit:
   shuffle: True
   validation_split: 0.1
   verbose: 1
-  early_stopping: true
+  early_stopping:
+    enabled: true
+    monitor: "val_loss"
+    patience: 10
+    min_delta: 0.001
+    restore_best_weights: true
   weight_factor: 1.5  # For non-problematic IDs
   weighted_machine_ids: []  # Will handle id_00 and id_04 explicitly in code
   apply_sample_weights: true  # Enable sample weighting
+  # Special case weights for problematic machine IDs
+  special_case_weights:
+    fan_id_00: 2.0
+    fan_id_04: 2.0
 
 # Filter to focus on specific dataset parts
 filter:
@@ -40,11 +57,36 @@ model:
     dropout: 0.2
     batch_norm: true
     residual: true
+    weight_decay: 0.0001  # L2 regularization weight decay
+    attention:
+      enabled: true
+      num_heads: 2
+      key_dim_factor: 0.5  # bottleneck // 2
+      bottleneck_weight: 0.7
+      attention_weight: 0.3
   loss: "binary_crossentropy"
+  normalization_method: "minmax"  # Options: "minmax", "zscore", "log"
+  threshold_optimization: true
+
+# Dataset generation parameters
+dataset:
+  split_ratio: [0.8, 0.1, 0.1]  # [train, validation, test]
+  file_extension: "wav"
+  default_prediction: 0.5  # Default value for error cases
+
+# Visualization parameters
+visualization:
+  figure_size: [30, 20]
+  history_plots: ["loss", "accuracy"]
 
 # Directory paths
 base_directory: "./dataset"
 pickle_directory: "./pickle_fnn"
 model_directory: "./model_fnn"
 result_directory: "./result_fnn"
-result_file: "result_fnn.yaml"
+result_file: "resultv2.yaml"
+
+# Logging parameters
+logging:
+  level: "DEBUG"
+  file: "baseline.log"
