--- a/baseline_AST.yaml
+++ b/baseline_AST.yaml
@@ -107,7 +107,7 @@ model:
       activation_fn: "gelu"  # Options: "gelu", "relu", "swish"
       ff_dim_multiplier: 4
       enable_rotary: false
-  loss: "binary_crossentropys"
+  loss: "binary_crossentropy"
   l2_regularization: 0.00001
   focal_loss:
     gamma: 2.0
