--- a/requirements.txt
+++ b/requirements.txt
@@ -14,4 +14,5 @@ pandas>=1.4.0
 seaborn>=0.11.0
 tensorflow-addons>=0.23.0
 transformers
-tensorflow>=2.13.0 tensorflow-addons
+tensorflow>=2.13.0
+tensorflow-addons
