--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,26 @@
-# Minimal package to use MIMII dataset baseline
-#tensorflow==2.10.0  # Updated for compatibility with newer NumPy
+# Core numeric and scientific libraries
 numpy==1.23.5
-protobuf
-matplotlib>=3.7.0
+scipy==1.10.1
+
+# Deep learning libraries
+tensorflow==2.13.0
+tensorflow-addons==0.20.0
+# Note: tf-keras is part of tensorflow, no need for separate install
+transformers==4.30.0
+
+# Audio processing
+librosa==0.10.0  # Compatible with numpy 1.23.5
+audioread==3.0.0
+
+# Data processing and visualization
+matplotlib==3.7.1
+seaborn==0.12.2
+scikit-learn==1.2.2
+scikit-image==0.20.0
+pandas==2.0.3
 PyYAML==6.0
-scikit-learn==1.0.2
-librosa==0.8.1
-audioread>=3.0.0
-tqdm>=4.65.0
-scikit-image>=0.19.0
-psutil>=5.9.0
-pandas>=1.4.0
-seaborn>=0.11.0
-tensorflow-addons>=0.23.0
-transformers
-tensorflow>=2.13.0
-tensorflow-addons
-tf-keras
+tqdm==4.65.0
+
+# System utilities
+psutil==5.9.5
+protobuf==4.23.4
