--- a/baseline_AST.yaml
+++ b/baseline_AST.yaml
@@ -13,7 +13,7 @@ feature:
     max_mask_time: 10
     n_freq_masks: 2
     n_time_masks: 2
-    noise_level: 0.01
+    noise_level: 0.005
   audio_augmentation:
     enabled: true
     time_stretch:
@@ -42,11 +42,11 @@ feature:
 fit:
   compile:
     optimizer: "adam"
-    learning_rate: 0.001
+    learning_rate: 0.005
     loss: "binary_crossentropy"
     metrics: ["accuracy"]
     weighted_metrics: ["accuracy"]
-  epochs: 100
+  epochs: 30
   batch_size: 32
   shuffle: True
   validation_split: 0.1
@@ -77,7 +77,7 @@ fit:
     mode: "max"
     save_best_only: true
   class_weight_balancing: true
-  abnormal_weight_multiplier: 3.0
+  abnormal_weight_multiplier: 1.0
   default_abnormal_weight: 10.0 
   warmup:
     enabled: true
@@ -86,7 +86,7 @@ fit:
 
 # Training optimizations
 training:
-  find_optimal_lr: true
+  find_optimal_lr: false
   mixed_precision: true
   xla_acceleration: false
   gradient_accumulation_steps: 1
@@ -136,7 +136,7 @@ dataset:
 # Debug settings
 debug:
   enabled: true  # Set to false for full dataset
-  sample_size: 200  # Number of samples to use in debug mode
+  sample_size: 500  # Number of samples to use in debug mode
 
 
 # Visualization parameters
