--- a/baseline_AST.yaml
+++ b/baseline_AST.yaml
@@ -100,6 +100,19 @@ training:
   memory_optimization:
     clear_memory_frequency: 50  # Clear memory every 50 batches
     prefetch_buffer_size: 4
+  progressive_training:
+    enabled: true
+    sizes: [[32, 48], [48, 64], [64, 96]]
+    epochs_per_size: [10, 10, 10]
+  streaming_data:
+    enabled: true
+    prefetch_buffer_size: 4
+    parallel_calls: 8
+  efficient_attention:
+    enabled: true
+    type: "linear"  # Options: "standard", "linear"
+  gradient_checkpointing:
+    enabled: true
 
 # Enhanced transformer model settings
 model:
