--- a/baseline_AST.yaml
+++ b/baseline_AST.yaml
@@ -41,7 +41,7 @@ feature:
 # Fit algorithm parameters
 fit:
   compile:
-    optimizer: "adam"
+    optimizer: "AdamW"
     learning_rate: 0.0001
     loss: "binary_crossentropy"
     metrics: ["accuracy"]
@@ -120,15 +120,14 @@ training:
 model:
   architecture:
     transformer:
-      num_heads: 4
-      dim_feedforward: 512
+      num_heads: 2
+      dim_feedforward: 256
       num_encoder_layers: 2
       positional_encoding: true
-      use_pretrained: true
+      use_pretrained: false
       pretrained_model: "google/vit-base-patch16-224"
       patch_size: 4
       attention_dropout: 0.1
-      # New parameters
       attention_type: "efficient"  # Options: "standard", "efficient", "linear"
       pos_encoding_type: "sinusoidal"  # Options: "sinusoidal", "learned", "alibi", "rotary"
       layer_norm_epsilon: 1.0e-6
